# cppref

./: .gitignore  LICENSE  README.md  pyproject.toml
cppref/: __init__.py  cli.py  index.py
cppref/data/: index.json
