[project]
name = "cppref"
version = "0.1.0"
description = "CLI helper for cppreference.com std symbols"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
cppref = "cppref.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
cppref = ["data/*.json"]
